V4125 e V4126: Aggiunti componenti OEE

--- a/Prevu.Synoptics.V4125_Cotiplast-FILM/PlantView.xaml
+++ b/Prevu.Synoptics.V4125_Cotiplast-FILM/PlantView.xaml
@@ -14,7 +14,7 @@
              d:Background="{DynamicResource MaterialDesignPaper}" >
     <Canvas Height="490" Width="1530" >
         <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="365" Canvas.Top="134" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:QX_ShortElectricalCabinet Width="54" Height="64" Canvas.Top="277" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="70"/>
+        <Machines:QX_ShortElectricalCabinet Width="54" Height="64" Canvas.Top="194" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="80"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="613" Canvas.Top="133" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="849" Canvas.Top="133" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="1074" Canvas.Top="133" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -29,9 +29,9 @@
         <Labels:GroupLabel GroupName="110" Canvas.Left="675" Canvas.Top="295" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="230" Canvas.Left="911" Canvas.Top="295" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="288" Canvas.Left="911" Canvas.Top="366" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="ESTOP-AREA-01" Canvas.Left="52" Canvas.Top="132" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="ESTOP-AREA-01" Canvas.Left="62" Canvas.Top="49" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="Q11" Canvas.Left="414" Canvas.Top="71" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="Q01" Canvas.Left="52" Canvas.Top="221" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="Q01" Canvas.Left="62" Canvas.Top="138" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="S110" Canvas.Left="414" Canvas.Top="220" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="S210" Canvas.Left="662" Canvas.Top="220" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="S710" Canvas.Left="1348" Canvas.Top="220" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -43,5 +43,7 @@
         <Labels:DeviceLabel ComponentName="Q41" Canvas.Left="898" Canvas.Top="71" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q61" Canvas.Left="1123" Canvas.Top="71" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q71" Canvas.Left="1348" Canvas.Top="71" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="OEE-POWER" Canvas.Left="62" Canvas.Top="314" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="OEE-WATER" Canvas.Left="62" Canvas.Top="380" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
