V4125 e V4126: rimosso componente OEE-POWER

--- a/Prevu.Synoptics.V4126_Cotiplast-PET/PlantView.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/PlantView.xaml
@@ -42,7 +42,6 @@
         <Labels:GroupLabel GroupName="140" Canvas.Left="426" Canvas.Top="439" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="430" Canvas.Left="873" Canvas.Top="439" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="530" Canvas.Left="873" Canvas.Top="512" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="OEE-POWER" Canvas.Left="52" Canvas.Top="404"/>
-        <Labels:DeviceLabel ComponentName="OEE-WATER" Canvas.Left="52" Canvas.Top="470"/>
+        <Labels:DeviceLabel ComponentName="OEE-WATER" Canvas.Left="52" Canvas.Top="420" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
