--- a/Prevu.Drawings/Machines/Release_01/Pits/V01_PSP_Pit.xaml
+++ b/Prevu.Drawings/Machines/Release_01/Pits/V01_PSP_Pit.xaml
@@ -4,34 +4,35 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Drawings.Machines"
+             xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents"
              mc:Ignorable="d" 
              IsHitTestVisible="False">
-    <Viewbox  Stretch="Uniform">
-        <Canvas Name="svg53" Width="199" Height="138">
+    <Viewbox Stretch="Uniform">
+        <Canvas Name="svg51" Width="197" Height="137">
             <Canvas.RenderTransform>
                 <TranslateTransform X="0" Y="0"/>
             </Canvas.RenderTransform>
             <Canvas.Resources>
-                <RectangleGeometry  x:Key="clip0_1438_103" Rect="0, 0, 199, 138"/>
+                <RectangleGeometry x:Key="clip0_1710_54" Rect="0, 0, 197, 137"/>
             </Canvas.Resources>
             <!--Unknown tag: sodipodi:namedview-->
-            <Canvas Name="g12" >
-                <Path  Name="path2" Fill="#FF808080">
-                    <Path.Data>
-                        <PathGeometry Figures="M126 3C126 1.89543 126.895 1 128 1H196V9.33591C196 10.9911 194.981 12.4753 193.436 13.0694L128.718 37.9549C127.408 38.4587 126 37.4917 126 36.0882V3Z" FillRule="NonZero"/>
-                    </Path.Data>
-                </Path>
-                <Canvas Name="g6" Effect="{StaticResource MaterialDesignElevationShadow1}">
-                    <Path  Name="path4" Fill="#FF808080">
+            <Canvas Name="g10" Clip="{StaticResource clip0_1710_54}">
+                <Canvas Name="g4" Effect="{StaticResource MaterialDesignElevationShadow1}">
+                    <Path Name="path2" Fill="#FF808080">
                         <Path.Data>
-                            <PathGeometry Figures="M1 6.40909C1 3.42173 3.42173 1 6.40909 1H127.591C130.578 1 133 3.42173 133 6.40909V105.318V130.591C133 133.578 130.578 136 127.591 136H29.4131C27.6498 136 25.9972 135.141 24.9847 133.697L1.98064 100.898C1.34241 99.9882 1 98.9037 1 97.7922V6.40909Z" FillRule="NonZero"/>
+                            <PathGeometry Figures="M1 2C1 1.44771 1.44772 1 2 1H195C195.552 1 196 1.44772 196 2V9.4478C196 10.685 195.24 11.7954 194.087 12.2438L133 36V105.318V130.591C133 133.578 130.578 136 127.591 136H29.4131C27.6498 136 25.9972 135.141 24.9847 133.697L1.98064 100.898C1.34241 99.9882 1 98.9037 1 97.7922V2Z" FillRule="NonZero"/>
                         </Path.Data>
                     </Path>
                 </Canvas>
-                <Canvas Name="g10" Effect="{StaticResource MaterialDesignElevationShadow1}">
-                    <Path  Name="path8" Fill="#FF808080">
+                <Labels:WaterLevel x:Name="MaterialLevel" Background="Transparent" d:Background="lightblue" Height="133" Width="193" HorizontalAlignment="Center" VerticalAlignment="Top" d:Opacity=".6" Canvas.Left="2" Canvas.Top="2">
+                    <Labels:WaterLevel.OpacityMask>
+                        <VisualBrush Visual="{Binding ElementName=path2}" />
+                    </Labels:WaterLevel.OpacityMask>
+                </Labels:WaterLevel>
+                <Canvas Name="g8" Effect="{StaticResource MaterialDesignElevationShadow1}">
+                    <Path Name="path6" StrokeThickness="2" Stroke="#FF808080" StrokeStartLineCap="Round" StrokeEndLineCap="Round">
                         <Path.Data>
-                            <PathGeometry Figures="M3 101L2.16795 101.555L2.17568 101.566L2.18373 101.578L3 101ZM26 133.5L25.1837 134.078L25.2328 134.147L25.2929 134.207L26 133.5ZM134 35L134.316 35.9487L134.339 35.9412L134.361 35.9327L134 35ZM193.5 12L193.861 12.9327L193.905 12.9156L193.947 12.8944L193.5 12ZM9.5 3C10.0523 3 10.5 2.55228 10.5 2C10.5 1.44772 10.0523 1 9.5 1V3ZM1 6V98H3V6H1ZM1 98C1 98.4847 0.994461 98.9957 1.16348 99.5872C1.33033 100.171 1.6461 100.772 2.16795 101.555L3.83205 100.445C3.3539 99.7281 3.16967 99.3288 3.08652 99.0378C3.00554 98.7543 3 98.5153 3 98H1ZM2.18373 101.578L25.1837 134.078L26.8163 132.922L3.81627 100.422L2.18373 101.578ZM25.2929 134.207C26.4019 135.316 27.6412 136 29 136V134C28.3588 134 27.5981 133.684 26.7071 132.793L25.2929 134.207ZM29 136H128V134H29V136ZM128 136C129.325 136 130.567 135.347 131.457 134.457C132.347 133.567 133 132.325 133 131H131C131 131.675 130.653 132.433 130.043 133.043C129.433 133.653 128.675 134 128 134V136ZM133 131V37.5H131V131H133ZM133 37.5C133 36.8431 133.113 36.6259 133.206 36.5152C133.326 36.3704 133.589 36.1911 134.316 35.9487L133.684 34.0513C132.911 34.3089 132.174 34.6296 131.669 35.2348C131.137 35.8741 131 36.6569 131 37.5H133ZM134.361 35.9327L193.861 12.9327L193.139 11.0673L133.639 34.0673L134.361 35.9327ZM3 6C3 5.32523 3.34745 4.56676 3.95711 3.95711C4.56676 3.34745 5.32523 3 6 3V1C4.67477 1 3.43324 1.65255 2.54289 2.54289C1.65255 3.43324 1 4.67477 1 6H3ZM6 3H9.5V1H6V3ZM193.947 12.8944C194.488 12.6241 195.019 12.2956 195.406 11.8122C195.821 11.2931 196 10.6864 196 10H194C194 10.3136 193.929 10.4569 193.844 10.5628C193.731 10.7044 193.512 10.8759 193.053 11.1056L193.947 12.8944ZM196 10V1H194V10H196Z" FillRule="NonZero"/>
+                            <PathGeometry Figures="M2 2V98C2 99 2 99.5 3 101L26 133.5C27 134.5 28 135 29 135H128C130 135 132 133 132 131V37.5C132 36 132.5 35.5 134 35L193.5 12C194.5 11.5 195 11 195 10V2" FillRule="NonZero"/>
                         </Path.Data>
                     </Path>
                 </Canvas>
